<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Fit_Terc</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_tue">Tue</string>
  <string name="lbl_thu">Thu</string>
  <string name="lbl_reps">Reps</string>
  <string name="lbl_syalakshay">syalakshay</string>
  <string name="lbl_steps">Steps</string>
  <string name="lbl_circular_std">Circular Std</string>
  <string name="lbl_dark">Dark</string>
  <string name="lbl_21">21 </string>
  <string name="lbl_2_33m">2.33M</string>
  <string name="lbl_bg">bg</string>
  <string name="msg_all_the_time_ea">all the time earn coins</string>
  <string name="lbl_title2">title</string>
  <string name="lbl_h4_18">H4 (18)</string>
  <string name="lbl_13_jan">13 Jan</string>
  <string name="lbl_skipping">Skipping</string>
  <string name="lbl_body_14">Body (14)</string>
  <string name="lbl_add_exercise">Add Exercise</string>
  <string name="lbl_heading_2_30">Heading 2 (30)</string>
  <string name="lbl_2_4_km">2.4 km</string>
  <string name="lbl_label_13">Label (13)</string>
  <string name="lbl_heading_4_20">Heading 4 (20)</string>
  <string name="lbl_calories">Calories</string>
  <string name="lbl_1_9_k">1.9 k</string>
  <string name="lbl_past_7_days">past 7 days</string>
  <string name="msg_skipping_for_30">Skipping for 30 mins</string>
  <string name="lbl_12_19">12.19</string>
  <string name="lbl_sat">Sat</string>
  <string name="lbl_3_524">3,524</string>
  <string name="msg_jogging_for_30">Jogging for 30 mins</string>
  <string name="lbl_heart_beat">Heart beat</string>
  <string name="lbl_cycling">Cycling</string>
  <string name="lbl_primary_grey">Primary
Grey</string>
  <string name="lbl_15">15</string>
  <string name="lbl_h2_24">H2 (24)</string>
  <string name="lbl_hello">Hello,</string>
  <string name="lbl_min">min</string>
  <string name="lbl_secondary_grey">Secondary
Grey</string>
  <string name="lbl_akshay_syal">JAMSHAID</string>
  <string name="lbl_10_5k">10.5k</string>
  <string name="lbl_456">456</string>
  <string name="lbl_meditation">Meditation</string>
  <string name="lbl_wed">Wed</string>
  <string name="lbl_05_30_am">05:30 am</string>
  <string name="lbl_edit_profile">Edit Profile</string>
  <string name="lbl_sun">Sun</string>
  <string name="lbl_my_alarm_plans">My Alarm Plans</string>
  <string name="lbl_save">Save</string>
  <string name="lbl_heading_1_36">Heading 1 (36)</string>
  <string name="lbl_title_16">Title (16)</string>
  <string name="lbl_primary">Primary</string>
  <string name="lbl_date">Date</string>
  <string name="lbl_colors">Colors</string>
  <string name="lbl_h3_20">H3 (20)</string>
  <string name="lbl_distance">Distance</string>
  <string name="lbl_coins">Coins</string>
  <string name="lbl_heading_3_24">Heading 3 (24)</string>
  <string name="lbl_heading_6_16">Heading 6 (16)</string>
  <string name="lbl_duration">Duration</string>
  <string name="lbl_typography">Typography</string>
  <string name="lbl_calories_burn">Calories Burn</string>
  <string name="lbl_view_history">View history</string>
  <string name="lbl_05_00_am">05:00 am</string>
  <string name="lbl_following">Following</string>
  <string name="lbl_secondary">Secondary</string>
  <string name="lbl_30">30</string>
  <string name="lbl_followers">Followers</string>
  <string name="lbl_34">34</string>
  <string name="lbl_h1_30">H1 (30)</string>
  <string name="lbl_38">38</string>
  <string name="lbl_1923">1923</string>
  <string name="lbl_title">Title</string>
  <string name="lbl_white">White</string>
  <string name="lbl_fri">Fri</string>
  <string name="lbl_112">112</string>
  <string name="lbl_caption_12">Caption (12)</string>
  <string name="lbl_952">952</string>
  <string name="lbl_mon">Mon</string>
  <string name="lbl_heading_5_18">Heading 5 (18)</string>
  <string name="lbl_border">Border</string>
  <string name="lbl_bebas_neue">Bebas Neue</string>
    <string name="edit">Edit</string>
  <string name="delete">Delete</string>
    <string name="update">Update</string>
</resources>
