<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="numbericFontVM" type="com.jamshaidsapplication.app.modules.numbericfont.data.viewmodel.NumbericFontVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearNumbericFont"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <TextView android:ellipsize="end"
            android:id="@+id/txtTypography"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_64pxh"
            android:layout_marginStart="@dimen/_64pxh"
            android:layout_marginTop="@dimen/_42pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{numbericFontVM.numbericFontModel.txtTypography}"
            style="@style/txtCircularStdmedium24" tools:text="@string/lbl_typography"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtArcivoBlack"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_64pxh"
            android:layout_marginStart="@dimen/_64pxh"
            android:layout_marginTop="@dimen/_42pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_2pxh"
            android:singleLine="true"
            android:text="@{numbericFontVM.numbericFontModel.txtArcivoBlack}"
            style="@style/txtBebasNeue18" tools:text="@string/lbl_bebas_neue"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtHeading136"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_64pxh"
            android:layout_marginStart="@dimen/_64pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:singleLine="true"
            android:text="@{numbericFontVM.numbericFontModel.txtHeading136}"
            style="@style/txtBebasNeue36" tools:text="@string/lbl_heading_1_36"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtHeading230"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_64pxh"
            android:layout_marginStart="@dimen/_64pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:singleLine="true"
            android:text="@{numbericFontVM.numbericFontModel.txtHeading230}"
            style="@style/txtBebasNeue30" tools:text="@string/lbl_heading_2_30"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtHeading324"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_64pxh"
            android:layout_marginStart="@dimen/_64pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_2pxh"
            android:singleLine="true"
            android:text="@{numbericFontVM.numbericFontModel.txtHeading324}"
            style="@style/txtBebasNeue24_1" tools:text="@string/lbl_heading_3_24"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtHeading420"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_64pxh"
            android:layout_marginStart="@dimen/_64pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_2pxh"
            android:singleLine="true"
            android:text="@{numbericFontVM.numbericFontModel.txtHeading420}"
            style="@style/txtBebasNeue20" tools:text="@string/lbl_heading_4_20"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtHeading518"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_64pxh"
            android:layout_marginStart="@dimen/_64pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_2pxh"
            android:singleLine="true"
            android:text="@{numbericFontVM.numbericFontModel.txtHeading518}"
            style="@style/txtBebasNeue18_1" tools:text="@string/lbl_heading_5_18"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtHeading616"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_64pxh"
            android:layout_marginStart="@dimen/_64pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_2pxh"
            android:singleLine="true"
            android:text="@{numbericFontVM.numbericFontModel.txtHeading616}"
            style="@style/txtBebasNeue16_1" tools:text="@string/lbl_heading_6_16"/>
    </LinearLayout>
</layout>
