<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="colorsVM" type="com.jamshaidsapplication.app.modules.colors.data.viewmodel.ColorsVM"/>
    </data>
    <LinearLayout android:gravity="start" android:id="@+id/linearColors"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <TextView android:ellipsize="end" android:id="@+id/txtColors"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_64pxh"
            android:layout_marginStart="@dimen/_64pxh"
            android:layout_marginTop="@dimen/_39pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{colorsVM.colorsModel.txtColors}"
            style="@style/txtCircularStdmedium24" tools:text="@string/lbl_colors"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnprimary"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_73pxv"
            android:layout_marginEnd="@dimen/_64pxh"
            android:layout_marginStart="@dimen/_64pxh"
            android:layout_marginTop="@dimen/_37pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius_4">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowprimary"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnPrimary"
                    android:layout_height="@dimen/_90pxh"
                    android:layout_width="@dimen/_90pxh"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:paddingBottom="@dimen/_30pxv"
                    android:paddingEnd="@dimen/_25pxh"
                    android:paddingStart="@dimen/_26pxh"
                    android:paddingTop="@dimen/_30pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_primary"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_1" tools:text="@string/lbl_primary"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnSecondary"
                    android:layout_height="@dimen/_90pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_width="@dimen/_90pxh"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:paddingBottom="@dimen/_30pxv"
                    android:paddingEnd="@dimen/_18pxh"
                    android:paddingStart="@dimen/_18pxh"
                    android:paddingTop="@dimen/_30pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_secondary"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_2" tools:text="@string/lbl_secondary"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowdark"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnDark"
                    android:layout_height="@dimen/_90pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_width="@dimen/_90pxh"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:paddingHorizontal="@dimen/_30pxh"
                    android:paddingVertical="@dimen/_30pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_dark"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_3" tools:text="@string/lbl_dark"/>
                <LinearLayout android:gravity="center_horizontal"
                    android:id="@+id/linearPrimaryGrey"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.25"
                    android:layout_width="0dp"
                    android:orientation="vertical" style="@style/groupStylebluegray_400cornerRadius">
                    <TextView android:gravity="center_horizontal"
                        android:id="@+id/txtPrimaryGrey"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/_29pxv"
                        android:layout_marginEnd="@dimen/_25pxh"
                        android:layout_marginStart="@dimen/_25pxh"
                        android:layout_marginTop="@dimen/_33pxv"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:text="@{colorsVM.colorsModel.txtPrimaryGrey}"
                        style="@style/txtPoppinsregular10" tools:text="@string/lbl_primary_grey"/>
                </LinearLayout>
                <LinearLayout android:gravity="center_horizontal"
                    android:id="@+id/linearSecondaryGrey"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.25"
                    android:layout_width="0dp"
                    android:orientation="vertical" style="@style/groupStylegray_400cornerRadius">
                    <TextView android:gravity="center_horizontal"
                        android:id="@+id/txtSecondaryGrey"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/_29pxv"
                        android:layout_marginEnd="@dimen/_18pxh"
                        android:layout_marginStart="@dimen/_18pxh"
                        android:layout_marginTop="@dimen/_33pxv"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:text="@{colorsVM.colorsModel.txtSecondaryGrey}"
                        style="@style/txtPoppinsregular10" tools:text="@string/lbl_secondary_grey"/>
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnBorder"
                    android:layout_height="@dimen/_90pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_90pxh"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:paddingBottom="@dimen/_30pxv"
                    android:paddingEnd="@dimen/_28pxh"
                    android:paddingStart="@dimen/_29pxh"
                    android:paddingTop="@dimen/_30pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_border"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_4" tools:text="@string/lbl_border"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowbg"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnBg"
                    android:layout_height="@dimen/_90pxh"
                    android:layout_width="@dimen/_90pxh"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:paddingHorizontal="@dimen/_30pxh"
                    android:paddingVertical="@dimen/_30pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_bg"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_5" tools:text="@string/lbl_bg"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnWhite"
                    android:layout_height="@dimen/_90pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_width="@dimen/_90pxh"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:paddingHorizontal="@dimen/_30pxh"
                    android:paddingVertical="@dimen/_30pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_white"
                    android:textAllCaps="false"
                    style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_white"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
